# reactor-core

./: .gitignore  MLFORGE_FILES_COPIED.md  PHASE_3_COMPLETE.md  README.md  SESSION_COMPLETE.md  TESTING.md  UNIFIED_COORDINATION_V85.md  pyproject.toml  run_supervisor.py
reactor_core/: __init__.py
reactor_core/api/: __init__.py  health_aggregator.py  model_registry.py  scheduler.py  server.py  telemetry.py
reactor_core/config/: __init__.py  base_config.py  distributed_config.py
reactor_core/config/schemas/: distillation.yaml  ingestion.yaml  orchestration.yaml  training.yaml
reactor_core/distillation/: __init__.py  cost_tracker.py  rate_limiter.py  rewriter_engine.py  scoring_engine.py  teacher_client.py
reactor_core/eval/: __init__.py  advanced_evaluation.py  base_evaluator.py  gatekeeper.py  jarvis_eval.py
reactor_core/formatting/: __init__.py  alpaca_formatter.py  base_formatter.py  chatml_formatter.py  dataset_builder.py  quality_filter.py
reactor_core/ingestion/: __init__.py  base_ingestor.py  batch_processor.py  feedback_ingestor.py  telemetry_ingestor.py
reactor_core/integration/: __init__.py  computer_use_connector.py  cost_bridge.py  event_bridge.py  jarvis_connector.py  unified_coordinator.py  vbia_connector.py  vbia_startup.py
reactor_core/orchestration/: __init__.py  notifications.py  pipeline.py  scheduler.py  trinity_orchestrator.py
reactor_core/quantization/: __init__.py  gguf_converter.py  llama_cpp_bridge.py
reactor_core/scout/: __init__.py  compliance_filter.py  content_extractor.py  knowledge_synthesizer.py  safe_scout_orchestrator.py  sandbox_executor.py  topic_queue.py  url_validator.py
reactor_core/serving/: __init__.py  inference_engine.py
reactor_core/training/: __init__.py  advanced_training.py  callbacks.py  cognitive_modules.py  federated_learning.py  lora.py  trainer.py  unified_pipeline.py
reactor_core/utils/: __init__.py  async_helpers.py  environment.py  logging_config.py
