[build-system]
requires = ["setuptools>=65.0", "wheel", "pybind11>=2.11.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reactor-core"
version = "2.0.0"
description = "Night Shift Training Engine - Autonomous Continuous Learning Pipeline for JARVIS AGI"
authors = [
    {name = "Derek Russell", email = "derek@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core ML
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "peft>=0.7.0",              # LoRA/QLoRA
    "accelerate>=0.24.0",
    "datasets>=2.14.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "safetensors>=0.4.0",

    # Night Shift - Training
    "trl>=0.7.0",               # SFTTrainer, DPOTrainer
    "bitsandbytes>=0.41.0",     # QLoRA quantization

    # Night Shift - Async & Concurrency
    "aiofiles>=23.0",           # Async file I/O
    "aiohttp>=3.9.0",           # Async HTTP client

    # Night Shift - Utilities
    "psutil>=5.9.0",            # System monitoring
    "rich>=13.0",               # Progress display & logging
    "structlog>=23.0",          # Structured logging
    "croniter>=2.0",            # Cron scheduling
    "humanize>=4.0",            # Human-readable formatting

    # Night Shift - Data Processing
    "pyarrow>=14.0",            # Parquet support
    "sentence-transformers>=2.2.0",  # Embedding dedup
]

[project.optional-dependencies]
local = [
    # M1 Mac optimizations
    "mlx>=0.0.10",              # Apple MLX support
]

gcp = [
    # GCP-specific dependencies
    "google-cloud-storage>=2.10.0",
    "google-cloud-compute>=1.14.0",
    "wandb>=0.15.0",            # Experiment tracking
]

quantization = [
    # GGUF/llama.cpp support
    "llama-cpp-python>=0.2.0",
    "gguf>=0.1.0",
]

distillation = [
    # Teacher model APIs
    "openai>=1.0.0",
    "anthropic>=0.7.0",
    "tiktoken>=0.5.0",          # Token counting
]

evaluation = [
    # Benchmarking
    "evaluate>=0.4.0",
    "human-eval>=1.0.0",
    "lm-eval>=0.4.0",           # Language model eval harness
]

dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.4.0",
    "ruff>=0.1.0",
]

all = [
    "reactor-core[local,gcp,quantization,distillation,evaluation,dev]",
]

[project.scripts]
nightshift = "reactor_core.cli:main"
nightshift-ingest = "reactor_core.cli:ingest"
nightshift-train = "reactor_core.cli:train"
nightshift-eval = "reactor_core.cli:evaluate"

[project.urls]
Homepage = "https://github.com/drussell23/reactor-core"
Repository = "https://github.com/drussell23/reactor-core"
Documentation = "https://github.com/drussell23/reactor-core#readme"
"Bug Tracker" = "https://github.com/drussell23/reactor-core/issues"

[tool.setuptools]
packages = ["reactor_core"]

[tool.setuptools.package-data]
reactor_core = ["py.typed", "*.so", "*.dylib", "*.pyd"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
